# miso-reactive

./: .gitignore  Makefile  README.md  app.cabal  cabal.project  flake.nix
app/: Main.hs
assets/: style.css
static/: index.html
