cabal-version: 2.2
name: miso-reactive
version: 0.1.0.0
synopsis: An example of Component communication that uses reactivity
category: Web

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm
  main-is:
    Main.hs
  build-depends:
    base, miso, lens
  hs-source-dirs:
    app
  default-language:
    Haskell2010
